feat: Set up real-time chat application
Configures the project for a real-time chat application using Vite, React, TypeScript, and Firebase. Includes setup for local development and deployment to GitHub Pages.

Updates include:
- Project name and version in `package.json`.
- Added scripts for building, linting, predeploy, and deploy.
- Updated dependencies and devDependencies to use compatible versions.
- Configured `tsconfig.json` and `tsconfig.node.json` for TypeScript.
- Modified `vite.config.ts` for React plugin and GitHub Pages base path.
- Updated `index.html` with correct script paths and CDN imports.
- Added `.gitignore` for standard build and node modules.
- Refactored `README.md` with setup and deployment instructions.
- Modified `src/App.tsx` to include Firebase initialization and basic component structure.

--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
-  "name": "gerçek-zamanlı-sohbet",
+  "name": "gercek-zamanli-sohbet",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "homepage": "https://<KULLANICI_ADINIZ>.github.io/<DEPO_ADINIZ>/",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "firebase": "^12.2.1"
+    "firebase": "^10.12.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.1.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
